force-app/main/default/objects/Aanwezige__c/Aanwezige__c.object-meta.xml
<CustomObject>
    <label>Attendee</label>
    <nameField>
        <displayFormat>GA-{000000}</displayFormat>
        <label>Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>