force-app/main/default/objects/Aanwezige__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Omdat een contactpersoon voor een andere organisatie kan gaan werken maar wel bewaard moet blijven namens wie hij bij het gesprek aanwezig was wordt bij aanmaken van de Aanwezige de accountnaam opgeslagen.</inlineHelpText>
    <label>(OLD) Werkt voor</label>
    <length>128</length>
    <type>Text</type>
</CustomField>