force-app/main/default/objects/Aanwezige__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>Omdat een contactpersoon voor een andere organisatie kan gaan werken maar wel bewaard met blijven namens wie hij bij het gesprek aanwezig was wordt bij aanmaken van de Aanwezige de accountnaam opgeslagen.</description>
    <label>(OLD) AccountName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>