force-app/main/default/objects/Aanwezige__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated with the contact&apos;s workplace.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>