force-app/main/default/objects/Aanwezige__c/fields/ContactRef__c.field-meta.xml
<CustomField>
    <fullName>ContactRef__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact associated with the meeting report.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>