force-app/main/default/objects/Aanwezige__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <formula>Verslag_gemaakt_door__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(OLD) Creator</label>
    <type>Checkbox</type>
</CustomField>