force-app/main/default/objects/Aanwezige__c/fields/Doel__c.field-meta.xml
<CustomField>
    <fullName>Doel__c</fullName>
    <formula>MeetingReportRef__r.MeetingGoal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(OLD) Doel</label>
    <type>Text</type>
</CustomField>