force-app/main/default/objects/Aanwezige__c/fields/Gesprek__c.field-meta.xml
<CustomField>
    <fullName>Gesprek__c</fullName>
    <formula>MeetingReportRef__r.Gespreksverslag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(OLD) Gesprek</label>
    <type>Text</type>
</CustomField>