force-app/main/default/objects/Aanwezige__c/fields/HeijmansContactContactRef__c.field-meta.xml
<CustomField>
    <fullName>HeijmansContactContactRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Heijmans Contact (Contact)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>contains</operation>
            <value>Heijmans</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendees (Heijmans Contact (Contact))</relationshipLabel>
    <relationshipName>Attendee</relationshipName>
    <type>Lookup</type>
</CustomField>