force-app/main/default/objects/Aanwezige__c/fields/HeijmansContactUserRef__c.field-meta.xml
<CustomField>
    <fullName>HeijmansContactUserRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Heijmans Contact (user)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>