force-app/main/default/objects/Aanwezige__c/fields/IsUserNotFound__c.field-meta.xml
<CustomField>
    <fullName>IsUserNotFound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to display new field via Dynamics forms.</description>
    <label>User Not Found</label>
    <type>Checkbox</type>
</CustomField>