force-app/main/default/objects/Aanwezige__c/fields/MeetingReportRef__c.field-meta.xml
<CustomField>
    <fullName>MeetingReportRef__c</fullName>
    <description>Meeting report related to the attendee record.</description>
    <label>Meeting Report</label>
    <referenceTo>Gespreksverslag__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>