force-app/main/default/objects/Aanwezige__c/fields/update__c.field-meta.xml
<CustomField>
    <fullName>update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(OLD) update</label>
    <type>Checkbox</type>
</CustomField>