force-app/main/default/objects/Aanwezige__c/fields/Verslag_gemaakt_door__c.field-meta.xml
<CustomField>
    <fullName>Verslag_gemaakt_door__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(OLD) Verslag gemaakt door</label>
    <type>Checkbox</type>
</CustomField>