force-app/main/default/objects/Aanwezige__c/recordTypes/ExternalContact.recordType-meta.xml
<RecordType>
    <fullName>ExternalContact</fullName>
    <active>true</active>
    <description>Contact related to clients or partners of Heijmans.</description>
    <label>External Contact</label>
</RecordType>