force-app/main/default/objects/Aanwezige__c/recordTypes/InternalContact.recordType-meta.xml
<RecordType>
    <fullName>InternalContact</fullName>
    <active>true</active>
    <description>Contact within the Heijmans organization</description>
    <label>Internal Contact</label>
</RecordType>